# peaq-network-node

./: Cargo.toml
.github/workflows/: bc-test-deployment.yml  publishondockerhub.yml
client/rpc-core/txpool/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/trace/: Cargo.toml
client/rpc/txpool/: Cargo.toml
node/: Cargo.toml
node/src/: cli.rs  command.rs  rpc.rs
node/src/parachain/: dev_chain_spec.rs  service.rs
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: lib.rs  weights.rs
pallets/evm-bridge/: Cargo.toml
pallets/evm-bridge/src/: lib.rs
pallets/parachain-staking/src/: types.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/balances-erc20/src/: eip2612.rs  lib.rs
precompiles/multicurrency/: Cargo.toml
precompiles/multicurrency/src/: lib.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
primitives/xcm/: Cargo.toml
primitives/xcm/src/: currency.rs  evm.rs
runtime/agung/: Cargo.toml
runtime/agung/src/: lib.rs  precompiles.rs
runtime/common/src/: lib.rs
runtime/evm_tracer/: Cargo.toml
runtime/krest/: Cargo.toml
runtime/krest/src/: lib.rs  precompiles.rs
runtime/peaq/: Cargo.toml
runtime/peaq-dev/: Cargo.toml
runtime/peaq-dev/src/: lib.rs  precompiles.rs
runtime/peaq/src/: lib.rs  xcm_config.rs
