[package]
name = "pallet-evm-bridge"
version = "2.16.0"
authors = ["peaq network"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true }
ethereum-types = { workspace = true, default-features = false }
peaq-primitives-xcm = { path = "../../primitives/xcm", default-features = false }
pallet-support = { path = "../support", default-features = false }
pallet-evm = { workspace = true, default-features = false }
precompile-utils-macro = { path = "../../precompiles/utils/macro" }
num_enum = { workspace = true, default-features = false }

[dev-dependencies]
serde_json = "1.0.68"
hex = "0.4"
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "ethereum-types/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "num_enum/std",
    "peaq-primitives-xcm/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-support/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-evm/try-runtime",
]
