[package]
name = "pallet-evm-precompile-balances-erc20"
authors = [ "PureStake" ]
description = "A Precompile to expose a Balances pallet through an ERC20-compliant interface."
edition = "2021"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
slices = "0.2.0"

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "max-encoded-len" ] }
frame-support = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
frame-system = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
pallet-balances = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
pallet-timestamp = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
sp-core = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
sp-io = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
sp-std = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }

# Frontier
fp-evm = { git = "https://github.com/peaqnetwork/frontier", default-features = false , branch = "peaq-polkadot-v0.9.38" }
pallet-evm = { git = "https://github.com/peaqnetwork/frontier", default-features = false, features = [ "forbid-evm-reentrancy" ] , branch = "peaq-polkadot-v0.9.38" }

[dev-dependencies]
derive_more = { version = "0.99" }
hex-literal = "0.3.4"
libsecp256k1 = "0.7"
serde = { version = "1.0.100" }
sha3 = "0.10"

# Moonbeam
precompile-utils = { path = "../utils", features = [ "testing" ] }

pallet-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
